# grom

./: README.md  pyproject.toml
grom/: __init__.py  lexer.py  scanner.py
tests/: common.py  test_scanning.py  test_strings.py  test_tokens.py
